retail page updated

--- a/index.html
+++ b/index.html
@@ -111,21 +111,20 @@
             </li>
             <li class="dropdown"><a href="#"><span>Products</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
-                <li><a href="bus-shelter.html">Bus Shelter</a></li>
+                <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+                <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
+                <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
+                <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
+                <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
                 <li><a href="frontlit-billboard.html">Frontlit Billboard</a></li>
                 <li><a href="backlit-billboard.html">Backlit Billboard</a></li>
-                <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
                 <li><a href="led-screen-billboard.html">LED Screen Billboard</a></li>
-                <li><a href="advertising-light-box.html">Advertising Light Box</a></li>
+                <li><a href="scrolling-billboard.html">Scrolling Billboard</a></li>
                 <li><a href="scrolling-lightbox.html">Scrolling Lightbox</a></li>
                 <li><a href="lamp-pole-lightbox.html">Lamp Pole Lightbox</a></li>
                 <li><a href="lamp-pole-display.html">Lamp Pole Display</a></li>
-                <li><a href="lcd-video-wall.html">LCD Video Wall</a></li>
-                <li><a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
-                <li><a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
-                <li><a href="#">Outdoor LED Display</a></li>
-                <li><a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
                 <li><a href="windvane.html">Windvane</a></li>
+                <li><a href="bus-shelter.html">Bus Shelter</a></li>
               </ul>
             </li>
             <li><a href="#">Case Studies</a></li>
@@ -346,9 +345,9 @@
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/menu.png" alt="">
               </div>
-              <h6><b>Menu Boards</b></h6>
+              <h6><b>Digital Menu Boards</b></h6>
               <p>Drive upsells, cross-sells and average purchase amounts at point of sale by displaying dynamic and
-                relevant content to your customers with digital menu boards. The ease of implementation means you can
+                relevant content to your customers with digital Digital menu boards. The ease of implementation means you can
                 get up and running in minutes, with minimal disruption to your store or restaurant.</p>
             </div>
             <div class="col-md-4">
@@ -356,7 +355,7 @@
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/interactive.png" alt="">
               </div>
               <h6><b>Interactive and Intelligent Signage</b></h6>
-              <p>From place and learn and intelligent menu boards to magic mirrors and touch sensor experiences, Aflax
+              <p>From place and learn and intelligent Digital menu boards to magic mirrors and touch sensor experiences, Aflax
                 provides you with all the tools to build fully interactive applications and signage content with ease.
               </p>
             </div>
@@ -377,7 +376,7 @@
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/outdoor.png" alt="">
               </div>
               <h6><b>Outdoor Signage</b></h6>
-              <p>From roadside totems to outdoor menu boards, there is a wealth of opportunity for using outdoor digital
+              <p>From roadside totems to outdoor Digital menu boards, there is a wealth of opportunity for using outdoor digital
                 signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by
                 capturing new customers and raising brand awareness.</p>
             </div>
