--- a/retail.html
+++ b/retail.html
@@ -518,6 +518,47 @@
     </div>
 
 
+    <!-- ======= Start Our Product Section ======= -->
+    <div class="container mt-5">
+      <h2 class="text-center">Our Digital Signage Features</h2>
+      <div class="row mt-5">
+        <div class="col-md-3 m-md-5 m-sm-5 border border-dark d-flex align-items-start flex-column bd-highlight mb-3">
+          <img src="assets/img/digital-features/1.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
+          <p class="p-2 bd-highlight"><b>Social Media Integration </b></p>
+          <p class="p-2 bd-highlight">Showcase your  social media onto your screen Including Twitter, YourTube and Instagram.</p>
+        </div>
+        <div class="col-md-3 m-md-5 m-sm-5 border border-dark d-flex align-items-start flex-column bd-highlight mb-3">
+          <img src="assets/img/digital-features/2.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
+          <p class="p-2 bd-highlight"><b>Photos & Videos </b></p>
+          <p class="p-2 bd-highlight">Upload your photos and videos to your content Library ready for use across your account.</p>
+        </div>
+        <div class="col-md-3 m-md-5 m-sm-5 border border-dark d-flex align-items-start flex-column bd-highlight mb-3">
+          <img src="assets/img/digital-features/3.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
+          <p class="p-2 bd-highlight"><b>Touch Screen Integration  </b></p>
+          <p class="p-2 bd-highlight">Take your digital signage one step further and utilise our touch integration with digital signage kiosks.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 m-md-5 m-sm-5 border border-dark d-flex align-items-start flex-column bd-highlight mb-3">
+          <img src="assets/img/digital-features/4.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
+          <p class="p-2 bd-highlight"><b>Scheduling  </b></p>
+          <p class="p-2 bd-highlight">Save time and reduce your workload through digital signage scheduling.</p>
+        </div>
+        <div class="col-md-3 m-md-5 m-sm-5 border border-dark d-flex align-items-start flex-column bd-highlight mb-3">
+          <img src="assets/img/digital-features/5.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
+          <p class="p-2 bd-highlight"><b>Control a Network of Screens  </b></p>
+          <p class="p-2 bd-highlight">Seamlessly control your network of digital menu boards from central hub.</p>
+        </div>
+        <div class="col-md-3 m-md-5 m-sm-5 border border-dark d-flex align-items-start flex-column bd-highlight mb-3">
+          <img src="assets/img/digital-features/6.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
+          <p class="p-2 bd-highlight"><b>Live Calendars  </b></p>
+          <p class="p-2 bd-highlight">Display your events through our popular calendar feature.</p>
+        </div>
+      </div>
+    </div>
+    <!-- ======= End Our Product Section ======= -->
+
+
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients bg-white">
       <br>
@@ -567,28 +608,28 @@
           <br>
           <br>
           <div class="row">
-            <div class="col-md-2 offset-md-1 bg-white shadow m-5 p-2">
+            <div class="col-md-2 bg-white shadow m-md-5 m-sm-2 p-2">
               <img width="80" height="80" src="assets/img/features/setup.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Simple Setup</b></h6>
               <p>No software to download. No Servers, Cloud-based application. Set up and running in minutes.</p>
             </div>
-            <div class="col-md-2 bg-white shadow m-5 p-2">
+            <div class="col-md-2 bg-white shadow m-md-5 m-sm-5 p-2">
               <img width="80" height="80" src="assets/img/features/no-hardware.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Little or No Hardware</b></h6>
               <p>Choose from a variety of players options including emended signage solutions called system-on-chip</p>
             </div>
-            <div class="col-md-2 bg-white shadow m-5 p-2">
+            <div class="col-md-2 bg-white shadow m-md-5 m-sm-5 p-2">
               <img width="80" height="80" src="assets/img/features/content2.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Easy Content Creation</b></h6>
               <p>Easily access eye-catching animations and interactive content with Aflax Signage Creator.</p>
             </div>
-            <div class="col-md-2 bg-white shadow m-5 p-2">
+            <div class="col-md-2 bg-white shadow m-md-5 m-sm-5 p-2">
               <img width="80" height="80" src="assets/img/features/screen.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -599,14 +640,14 @@
           </div>
 
           <div class="row">
-            <div class="col-md-2 offset-md-1 bg-white shadow m-5 p-2">
+            <div class="col-md-2 offset-md-1 bg-white shadow m-md-5 m-sm-5 p-2">
               <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Schedules and Campaigns</b></h6>
               <p>Schedule content changes in advance which can include seasonal or promotional campaigns.</p>
             </div>
-            <div class="col-md-2 bg-white shadow m-5 p-2">
+            <div class="col-md-2 bg-white shadow m-md-5 m-sm-5 p-2">
               <img width="80" height="80" src="assets/img/features/interactive.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -614,14 +655,14 @@
               <p>From interactive kiosks to tablet application, Aflax digital signage makes it easy to build interactive
                 experiences.</p>
             </div>
-            <div class="col-md-2 bg-white shadow m-5 p-2">
+            <div class="col-md-2 bg-white shadow m-md-5 m-sm-5 p-2">
               <img width="80" height="80" src="assets/img/features/photoshop.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Imprt Designs from Photoshop</b></h6>
               <p>Adobe users are able to upload and edit their designs layer by layer as displayed in photoshop.</p>
             </div>
-            <div class="col-md-2 bg-white shadow m-5 p-2">
+            <div class="col-md-2 bg-white shadow m-md-5 m-sm-5 p-2">
               <img width="80" height="80" src="assets/img/features/data.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -635,68 +676,8 @@
     </div>
     <!-- End Features Section -->
 
-    <!-- ======= Start Our Product Section ======= -->
-    <div class="container text-center mt-5">
-      <h2>Digital Signage Products for Retail Industry</h2>
-      <div class="row">
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="col-md-2 m-5">
-          <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-secondary">
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-    </div>
-    <!-- ======= End Our Product Section ======= -->
-
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact white-smoke">
+    <section id="contact" class="contact">
       <div class="container">
         <h1 class="text-center"><b><span class="red">CONTACT US TODAY</span></b></h1>
         <h6 class="text-center text-primary"><b> Our current happy users started here...</b></h6>
