--- a/retail.html
+++ b/retail.html
@@ -151,9 +151,9 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active"
+          <div class="carousel-item active mt-5"
             style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
-            <div class="carousel-container">
+            <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
                   Are you looking to create a dynamic in-store experience with Digital Store Signage?
@@ -163,9 +163,9 @@
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item"
+          <div class="carousel-item mt-5"
             style="background-image: url(assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg)">
-            <div class="carousel-container">
+            <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
                   We will provide you with a solution that promises to increase customer engagement and boost sales.
@@ -175,8 +175,8 @@
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
-            <div class="carousel-container">
+          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
+            <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>Put
                   your
