--- a/retail.html
+++ b/retail.html
@@ -213,8 +213,8 @@
     </div>
 
     <div class="white-smoke">
-      <div class="container mt-5">
-        <div class="row  p-3 mb-5 rounded">
+      <div class="container mt-3">
+        <div class="row rounded">
           <div class="col-md-6 d-flex align-items-center">
             <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -344,7 +344,7 @@
 
     <div>
       <div class="container">
-        <div class="row  p-3 mb-5 rounded">
+        <div class="row rounded">
           <div class="col-md-6 d-flex align-items-center">
             <div id="carouselExampleIndicatorsR2" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner d-flex align-items-center" style="height: 50vh;">
@@ -443,7 +443,7 @@
 
     <div class="white-smoke">
       <div class="container">
-        <div class="row  p-3 mb-5 rounded">
+        <div class="row rounded">
           <div class="col-md-6 d-flex align-items-center mt-5">
             <div id="carouselExampleIndicatorsI3" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -520,43 +520,43 @@
 
 
     <!-- ======= Start Our Product Section ======= -->
-    <div class="container mt-5">
+    <div class="container mt-2">
       <h2 class="text-center text-uppercase text-danger fw-bold">Our Digital Signage Features</h2>
-      <div class="row mt-5">
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight mb-3">
-          <img src="assets/img/digital-features/1.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
-          <p class="p-2 bd-highlight"><b>Social Media Integration </b></p>
-          <p class="p-2 bd-highlight">Showcase your social media onto your screen Including Twitter, YourTube and
+      <div class="row">
+        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
+          <img src="assets/img/digital-features/1.png" alt="" class="img-fluid mb-auto bd-highlight">
+          <p class="bd-highlight"><b>Social Media Integration </b></p>
+          <p class="bd-highlight">Showcase your social media onto your screen Including Twitter, YourTube and
             Instagram.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight mb-3">
-          <img src="assets/img/digital-features/2.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
+        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
+          <img src="assets/img/digital-features/2.png" alt="" class="img-fluid mb-auto bd-highlight">
           <p class="p-2 bd-highlight"><b>Photos & Videos </b></p>
           <p class="p-2 bd-highlight">Upload your photos and videos to your content Library ready for use across your
             account.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight mb-3">
-          <img src="assets/img/digital-features/3.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
-          <p class="p-2 bd-highlight"><b>Touch Screen Integration </b></p>
-          <p class="p-2 bd-highlight">Take your digital signage one step further and utilise our touch integration with
+        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
+          <img src="assets/img/digital-features/3.png" alt="" class="img-fluid mb-auto bd-highlight">
+          <p class="bd-highlight"><b>Touch Screen Integration </b></p>
+          <p class="bd-highlight">Take your digital signage one step further and utilise our touch integration with
             digital signage kiosks.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight mb-3">
-          <img src="assets/img/digital-features/4.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
-          <p class="p-2 bd-highlight"><b>Scheduling </b></p>
-          <p class="p-2 bd-highlight">Save time and reduce your workload through digital signage scheduling.</p>
+        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
+          <img src="assets/img/digital-features/4.png" alt="" class="img-fluid mb-auto bd-highlight">
+          <p class="bd-highlight"><b>Scheduling </b></p>
+          <p class="bd-highlight">Save time and reduce your workload through digital signage scheduling.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight mb-3">
-          <img src="assets/img/digital-features/5.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
-          <p class="p-2 bd-highlight"><b>Control a Network of Screens </b></p>
-          <p class="p-2 bd-highlight">Seamlessly control your network of digital menu boards from central hub.</p>
+        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
+          <img src="assets/img/digital-features/5.png" alt="" class="img-fluid mb-auto bd-highlight">
+          <p class="bd-highlight"><b>Control a Network of Screens </b></p>
+          <p class="bd-highlight">Seamlessly control your network of digital menu boards from central hub.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight mb-3">
-          <img src="assets/img/digital-features/6.png" alt="" class="img-fluid mb-auto p-2 bd-highlight">
-          <p class="p-2 bd-highlight"><b>Live Calendars </b></p>
-          <p class="p-2 bd-highlight">Display your events through our popular calendar feature.</p>
+        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
+          <img src="assets/img/digital-features/6.png" alt="" class="img-fluid mb-auto bd-highlight">
+          <p class="bd-highlight"><b>Live Calendars </b></p>
+          <p class="bd-highlight">Display your events through our popular calendar feature.</p>
         </div>
       </div>
     </div>
@@ -565,12 +565,9 @@
 
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients white-smoke">
-      <br>
-      <br>
       <div class="container">
         <h2 class="text-danger fw-bold">CUSTOMERS</h2>
         <div class="row">
-
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
           </div>
@@ -601,9 +598,9 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Start Features Section ======= -->
-    <div class="container mt-5">
+    <div class="container mt-3">
       <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Product for Retail Industry</h2>
-      <div class="row mt-5">
+      <div class="row mt-3">
         <div class="col-md-3">
           <a href="indoor-lcd-display.html">
             <img src="assets/img/Indoor-LCD-Display/3.jpg" alt="" class="img-fluid border border-dark">
@@ -629,7 +626,7 @@
           </a>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-3">
         <div class="col-md-3">
           <a href="advertising-light-box.html">
             <img src="assets/img/Advertising-Light-Box/1A.jpg" alt="" class="img-fluid border border-dark">
@@ -655,7 +652,7 @@
           </a>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-3">
         <div class="col-md-3">
           <a href="scrolling-billboard.html">
             <img src="assets/img/scrolling-billboard/1A.jpg" alt="" class="img-fluid border border-dark">
