retail page update

--- a/retail.html
+++ b/retail.html
@@ -199,7 +199,7 @@
       </div>
     </section><!-- End Hero -->
 
-    <div class="container mt-5">
+    <div class="container">
       <div class="row">
         <div class="col-12 text-center">
           <h2 class="text-uppercase fw-bold text-danger">Digital Signage for Retail</h2>
@@ -213,7 +213,7 @@
     </div>
 
     <div class="white-smoke">
-      <div class="container mt-3">
+      <div class="container">
         <div class="row rounded">
           <div class="col-md-6 d-flex align-items-center">
             <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
