--- a/retail.html
+++ b/retail.html
@@ -213,7 +213,7 @@
     </div>
 
     <div class="white-smoke">
-      <div class="container mt-3">
+      <div class="container mt-5">
         <div class="row rounded">
           <div class="col-md-6">
             <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
@@ -493,43 +493,43 @@
 
 
     <!-- ======= Start Our Product Section ======= -->
-    <div class="container mt-3">
+    <div class="container mt-5">
       <h2 class="text-center text-uppercase text-danger fw-bold">Our Digital Signage Features</h2>
       <div class="row">
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
-          <img src="assets/img/digital-features/1.png" alt="" class="img-fluid mb-auto bd-highlight">
-          <p class="bd-highlight"><b>Social Media Integration </b></p>
-          <p class="bd-highlight">Showcase your social media onto your screen Including Twitter, YourTube and
+        <div class="col-md-4 featureshover">
+          <img src="assets/img/digital-features/1.png" alt="" class="img-fluid">
+          <p class=""><b>Social Media Integration </b></p>
+          <p class="">Showcase your social media onto your screen Including Twitter, YourTube and
             Instagram.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
-          <img src="assets/img/digital-features/2.png" alt="" class="img-fluid mb-auto bd-highlight">
-          <p class="p-2 bd-highlight"><b>Photos & Videos </b></p>
-          <p class="p-2 bd-highlight">Upload your photos and videos to your content Library ready for use across your
+        <div class="col-md-4 featureshover">
+          <img src="assets/img/digital-features/2.png" alt="" class="img-fluid">
+          <p class=""><b>Photos & Videos </b></p>
+          <p class="">Upload your photos and videos to your content Library ready for use across your
             account.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
-          <img src="assets/img/digital-features/3.png" alt="" class="img-fluid mb-auto bd-highlight">
-          <p class="bd-highlight"><b>Touch Screen Integration </b></p>
-          <p class="bd-highlight">Take your digital signage one step further and utilise our touch integration with
+        <div class="col-md-4 featureshover">
+          <img src="assets/img/digital-features/3.png" alt="" class="img-fluid">
+          <p class=""><b>Touch Screen Integration </b></p>
+          <p class="">Take your digital signage one step further and utilise our touch integration with
             digital signage kiosks.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
-          <img src="assets/img/digital-features/4.png" alt="" class="img-fluid mb-auto bd-highlight">
-          <p class="bd-highlight"><b>Scheduling </b></p>
+        <div class="col-md-4 featureshover">
+          <img src="assets/img/digital-features/4.png" alt="" class="img-fluid">
+          <p class=""><b>Scheduling </b></p>
           <p class="bd-highlight">Save time and reduce your workload through digital signage scheduling.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
-          <img src="assets/img/digital-features/5.png" alt="" class="img-fluid mb-auto bd-highlight">
-          <p class="bd-highlight"><b>Control a Network of Screens </b></p>
-          <p class="bd-highlight">Seamlessly control your network of digital menu boards from central hub.</p>
+        <div class="col-md-4 featureshover">
+          <img src="assets/img/digital-features/5.png" alt="" class="img-fluid">
+          <p class=""><b>Control a Network of Screens </b></p>
+          <p class="">Seamlessly control your network of digital menu boards from central hub.</p>
         </div>
-        <div class="col-md-3 m-md-5 m-sm-5 d-flex align-items-start flex-column bd-highlight">
-          <img src="assets/img/digital-features/6.png" alt="" class="img-fluid mb-auto bd-highlight">
-          <p class="bd-highlight"><b>Live Calendars </b></p>
-          <p class="bd-highlight">Display your events through our popular calendar feature.</p>
+        <div class="col-md-4 featureshover">
+          <img src="assets/img/digital-features/6.png" alt="" class="img-fluid">
+          <p class=""><b>Live Calendars </b></p>
+          <p class="">Display your events through our popular calendar feature.</p>
         </div>
       </div>
     </div>
