retail page update

--- a/retail.html
+++ b/retail.html
@@ -324,7 +324,7 @@
     <div>
       <div class="container">
         <div class="row rounded">
-          <div class="col-md-6 d-flex align-items-center">
+          <div class="col-md-6 d-flex align-items-center order-md-1 order-2">
             <div id="carouselExampleIndicatorsR2" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner d-flex align-items-center">
                 <div class="carousel-item active">
@@ -388,7 +388,7 @@
 
             </div>
           </div>
-          <div class="col-md-5 offset-md-1 d-flex align-items-center mt-5">
+          <div class="col-md-5 offset-md-1 d-flex align-items-center mt-5 order-md-2 order-1">
             <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -497,19 +497,28 @@
       <h2 class="text-center text-uppercase text-danger fw-bold">Our Digital Signage Features</h2>
       <div class="row">
         <div class="col-md-4 featureshover">
-          <img src="assets/img/digital-features/1.png" alt="" class="img-fluid">
+          <div class="text-center">
+            <img src="assets/img/digital-features/1.png" alt="" class="img-fluid text">
+
+          </div>
           <p class=""><b>Social Media Integration </b></p>
           <p class="">Showcase your social media onto your screen Including Twitter, YourTube and
             Instagram.</p>
         </div>
         <div class="col-md-4 featureshover">
-          <img src="assets/img/digital-features/2.png" alt="" class="img-fluid">
+          <div class="text-center">
+            <img src="assets/img/digital-features/2.png" alt="" class="img-fluid">
+
+          </div>
           <p class=""><b>Photos & Videos </b></p>
           <p class="">Upload your photos and videos to your content Library ready for use across your
             account.</p>
         </div>
         <div class="col-md-4 featureshover">
-          <img src="assets/img/digital-features/3.png" alt="" class="img-fluid">
+          <div class="text-center">
+            <img src="assets/img/digital-features/3.png" alt="" class="img-fluid">
+
+          </div>
           <p class=""><b>Touch Screen Integration </b></p>
           <p class="">Take your digital signage one step further and utilise our touch integration with
             digital signage kiosks.</p>
@@ -517,17 +526,26 @@
       </div>
       <div class="row">
         <div class="col-md-4 featureshover">
-          <img src="assets/img/digital-features/4.png" alt="" class="img-fluid">
+          <div class="text-center">
+            <img src="assets/img/digital-features/4.png" alt="" class="img-fluid">
+
+          </div>
           <p class=""><b>Scheduling </b></p>
           <p class="bd-highlight">Save time and reduce your workload through digital signage scheduling.</p>
         </div>
         <div class="col-md-4 featureshover">
-          <img src="assets/img/digital-features/5.png" alt="" class="img-fluid">
+          <div class="text-center">
+            <img src="assets/img/digital-features/5.png" alt="" class="img-fluid">
+
+          </div>
           <p class=""><b>Control a Network of Screens </b></p>
           <p class="">Seamlessly control your network of digital menu boards from central hub.</p>
         </div>
         <div class="col-md-4 featureshover">
-          <img src="assets/img/digital-features/6.png" alt="" class="img-fluid">
+          <div class="text-center">
+            <img src="assets/img/digital-features/6.png" alt="" class="img-fluid">
+
+          </div>
           <p class=""><b>Live Calendars </b></p>
           <p class="">Display your events through our popular calendar feature.</p>
         </div>
@@ -537,7 +555,7 @@
 
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients white-smoke">
+    <section id="clients" class="clients white-smoke mt-5">
       <div class="container">
         <h2 class="text-danger fw-bold">CUSTOMERS</h2>
         <div class="row">
@@ -571,7 +589,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Start Features Section ======= -->
-    <section class="products p-0 mt-3">
+    <section class="products p-0 mt-5">
       <div class="container">
         <h2 class="text-center text-uppercase text-danger fw-bold">Digital Signage Product for Retail Industry</h2>
         <div class="row mt-3">
