--- a/restaurants.html
+++ b/restaurants.html
@@ -156,7 +156,7 @@
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RESTAURANTS</span>
                   <br>
-                  AFLAX: BAR / RESTAURANTS
+                  Digital Menu Boards for Restaurants 
                 </h2>
               </div>
             </div>
