education page updated

--- a/hotels.html
+++ b/hotels.html
@@ -213,7 +213,7 @@
                       Transform your lobby by replacing static posters and notices with a led signage board in order to add value and inject visual appeal to your establishment’s decor. Keep your guests informed and engaged at all times by displaying current content, live news or entertainment whilst they spend time in your lobby area.
                     </p>
                     <p>
-                      Aflax ’s hotel signage allows for content to be updated swiftly and simply.  The displays can be edited in real-time, at the click of a button. No matter whether you’d like to share a personalised welcome message for guests you are expecting to greet, or if you’d like to promote specific facilities, Aflax ’s digital signage for hospitality & technology has the functionality to create an outstanding first impression with designs that are professional and in line with your corporate image.
+                      No matter whether you’d like to share a personalised welcome message for guests you are expecting to greet, or if you’d like to promote specific facilities, Aflax ’s digital signage for hospitality & technology has the functionality to create an outstanding first impression with designs that are professional and in line with your corporate image.
                     </p>
                   </div>
                 </div>
