mall page updated

--- a/mall-supermarket.html
+++ b/mall-supermarket.html
@@ -153,7 +153,7 @@
 
                     <!-- Slide 1 -->
                     <div class="carousel-item active mt-5"
-                        style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
+                        style="background-image: url(assets/img/mall/slider1.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red text-uppercase">AFLAX:
@@ -166,7 +166,7 @@
 
                     <!-- Slide 2 -->
                     <div class="carousel-item mt-5"
-                        style="background-image: url(assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg)">
+                        style="background-image: url(assets/img/mall/slider5.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red text-uppercase">AFLAX:
@@ -178,7 +178,7 @@
                     </div>
 
                     <!-- Slide 3 -->
-                    <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
+                    <div class="carousel-item mt-5" style="background-image: url(assets/img/mall/slider2.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red text-uppercase">AFLAX:
@@ -223,7 +223,7 @@
                         <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active d-flex align-items-center">
-                                    <img src="assets/img/retail/b49c60fc533489385afe54292bc9b216.JPG" class="img-fluid"
+                                    <img src="assets/img/mall/5.jpg" class="img-fluid"
                                         alt="...">
                                 </div>
                                 <!-- <div class="carousel-item">
@@ -346,7 +346,7 @@
                         <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/retail/headers-1080x675-RetailDigitalSignage.png"
+                                    <img src="assets/img/mall/4.jpg"
                                         class="img-fluid" alt="...">
                                 </div>
                                 <!-- <div class="carousel-item">
@@ -380,7 +380,7 @@
                         <div id="carouselExampleIndicatorsI3" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/retail/tradeshow_graphics_retail_r3.jpg" class="img-fluid"
+                                    <img src="assets/img/mall/2.jpg" class="img-fluid"
                                         alt="...">
                                 </div>
                                 <!-- <div class="carousel-item">
