event places pages updated

--- a/gym.html
+++ b/gym.html
@@ -94,7 +94,7 @@
                                 <li><a href="hospitals.html">Hospitals</a></li>
                                 <li><a href="car-show.html">Car Show </a></li>
                                 <li><a href="gym.html">Gym / Fitness Centres</a></li>
-                                <li><a href="#">Airport</a></li>
+                                <li><a href="airport.html">Airport</a></li>
                                 <li><a href="event-places.html">Event places </a></li>
                                 <li><a href="government-institutions.html">Government institutions </a></li>
                                 <li><a href="stadium.html">Stadium's</a></li>
