--- a/retail.html
+++ b/retail.html
@@ -151,7 +151,7 @@
 
           <!-- Slide 1 -->
           <div class="carousel-item active mt-5"
-            style="background-image: url(assets/img/retail/headers-1080x675-RetailDigitalSignage.png)">
+            style="background-image: url(assets/img/retail/s1.jpg)">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
@@ -163,7 +163,7 @@
 
           <!-- Slide 2 -->
           <div class="carousel-item mt-5"
-            style="background-image: url(assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg)">
+            style="background-image: url(assets/img/retail/s2.jpg)">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
@@ -174,7 +174,7 @@
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/DS-1024x812.jpg)">
+          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/s3.jpg)">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>Put
@@ -218,7 +218,7 @@
             <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active d-flex align-items-center">
-                  <img src="assets/img/retail/b49c60fc533489385afe54292bc9b216.JPG" class="img-fluid" alt="...">
+                  <img src="assets/img/retail/retail2.jpg" class="img-fluid" alt="...">
                 </div>
                 <!-- <div class="carousel-item">
                   <img src="assets/img/retail/cover_image_1613400805.jpg.760x400_q85_crop_upscale.jpg" class="img-fluid"
@@ -391,7 +391,7 @@
             <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/retail/headers-1080x675-RetailDigitalSignage.png" class="img-fluid" alt="...">
+                  <img src="assets/img/retail/retail3.jpg" class="img-fluid" alt="...">
                 </div>
                 <!-- <div class="carousel-item">
                   <img src="assets/img/retail/indoor-retail-LED-display.jpg" class="img-fluid" alt="...">
@@ -424,7 +424,7 @@
             <div id="carouselExampleIndicatorsI3" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="assets/img/retail/tradeshow_graphics_retail_r3.jpg" class="img-fluid" alt="...">
+                  <img src="assets/img/retail/retail4.jpg" class="img-fluid" alt="...">
                 </div>
                 <!-- <div class="carousel-item">
                   <img src="assets/img/retail/b49c60fc533489385afe54292bc9b216.JPG" class="img-fluid" alt="...">
