car-show page updated

--- a/car-show.html
+++ b/car-show.html
@@ -142,7 +142,7 @@
 
                     <!-- Slide 1 -->
                     <div class="carousel-item active mt-5"
-                        style="background-image: url(assets/img/Car-show/slider1.PNG)">
+                        style="background-image: url(assets/img/Car-show/car1.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span
@@ -207,7 +207,7 @@
                         <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active d-flex align-items-center">
-                                    <img src="assets/img/Car-show/1.png" class="img-fluid" alt="...">
+                                    <img src="assets/img/Car-show/A.jpg" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                         <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
                             <div class="carousel-inner d-flex align-items-center">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/Car-show/2.PNG" class="img-fluid" alt="...">
+                                    <img src="assets/img/Car-show/B.jpg" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
@@ -283,7 +283,7 @@
                         <div id="carouselExampleIndicatorsI3" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner d-flex align-items-center">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/Car-show/3.jpg" class="img-fluid" alt="...">
+                                    <img src="assets/img/Car-show/C.png" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
