new images added in retail page

--- a/retail.html
+++ b/retail.html
@@ -150,37 +150,38 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active mt-5"
-            style="background-image: url(assets/img/retail/s1.jpg)">
+          <div class="carousel-item active" 
+            style="background-image: url(assets/img/retail/j1.jpeg); margin-top: 10rem;">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
+                <!-- <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
                   Are you looking to create a dynamic in-store experience with Digital Store Signage?
-                </h2>
+                </h2> -->
               </div>
             </div>
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item mt-5"
-            style="background-image: url(assets/img/retail/s2.jpg)">
+          <div class="carousel-item"
+            style="background-image: url(assets/img/retail/j2.jpeg); margin-top: 10rem;">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
+                <!-- <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
                   We will provide you with a solution that promises to increase customer engagement and boost sales.
-                </h2>
+                </h2> -->
               </div>
             </div>
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item mt-5" style="background-image: url(assets/img/retail/s3.jpg)">
+          <div class="carousel-item"
+            style="background-image: url(assets/img/retail/j3.jpeg); margin-top: 10rem;">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
-                <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>Put
+                <!-- <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>Put
                   your
                   customers in the mood to buy.
-                </h2>
+                </h2> -->
               </div>
             </div>
           </div>
