retail page design and new education images added

--- a/retail.html
+++ b/retail.html
@@ -151,7 +151,7 @@
 
           <!-- Slide 1 -->
           <div class="carousel-item active" 
-            style="background-image: url(assets/img/retail/j1.jpeg); margin-top: 10rem;">
+            style="background-image: url(assets/img/retail/j1.jpeg); background-size: contain; margin-top: 12rem; width: 100%; background-color: #ffffff;">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <!-- <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
@@ -163,7 +163,7 @@
 
           <!-- Slide 2 -->
           <div class="carousel-item"
-            style="background-image: url(assets/img/retail/j2.jpeg); margin-top: 10rem;">
+            style="background-image: url(assets/img/retail/j2.jpeg); background-size: contain; margin-top: 12rem; width: 100%; background-color: #ffffff;">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <!-- <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>
@@ -175,7 +175,7 @@
 
           <!-- Slide 3 -->
           <div class="carousel-item"
-            style="background-image: url(assets/img/retail/j3.jpeg); margin-top: 10rem;">
+            style="background-image: url(assets/img/retail/j3.jpeg); background-size: contain; margin-top: 12rem; width: 100%; background-color: #ffffff;">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
                 <!-- <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: RETAIL</span> <br>Put
