--- a/education.html
+++ b/education.html
@@ -142,7 +142,7 @@
 
                     <!-- Slide 1 -->
                     <div class="carousel-item active mt-5"
-                        style="background-image: url(assets/img/education/slider1.jpg)">
+                        style="background-image: url(assets/img/education/new_slide1.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX:
@@ -155,7 +155,7 @@
                     </div>
 
                     <!-- Slide 2 -->
-                    <div class="carousel-item mt-5" style="background-image: url(assets/img/education/slider2.jpg)">
+                    <div class="carousel-item mt-5" style="background-image: url(assets/img/education/new_slide2.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX:
@@ -168,7 +168,7 @@
                     </div>
 
                     <!-- Slide 3 -->
-                    <div class="carousel-item mt-5" style="background-image: url(assets/img/education/slider3.jpg)">
+                    <div class="carousel-item mt-5" style="background-image: url(assets/img/education/new_slide3.jpg)">
                         <div class="carousel-container mt-5">
                             <div class="container mt-5">
                                 <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX:
@@ -206,7 +206,7 @@
                         <div id="carouselExampleIndicatorsE" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active d-flex align-items-center">
-                                    <img src="assets/img/education/1.jpg" class="img-fluid" alt="...">
+                                    <img src="assets/img/education/new1.jpg" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                         <div id="carouselExampleIndicatorsH2" class="carousel slide mt-3" data-bs-ride="carousel">
                             <div class="carousel-inner d-flex align-items-center">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/education/2.jpg" class="img-fluid" alt="...">
+                                    <img src="assets/img/education/new2.jpg" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
@@ -286,7 +286,7 @@
                         <div id="carouselExampleIndicatorsI3" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner d-flex align-items-center">
                                 <div class="carousel-item active">
-                                    <img src="assets/img/education/3.jpg" class="img-fluid" alt="...">
+                                    <img src="assets/img/education/new3.jpg" class="img-fluid" alt="...">
                                 </div>
                             </div>
                         </div>
