--- a/retail.html
+++ b/retail.html
@@ -33,6 +33,13 @@
   <!-- Custome CSS File -->
   <link rel="stylesheet" href="assets/css/custom.css">
 
+  <style>
+    #hero .carousel-item::before {
+      content: '';
+      background-color: transparent;
+    }
+  </style>
+
   <!-- =======================================================
   * Author: Abu Saleh Faysal
   ======================================================== -->
@@ -150,7 +157,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" 
+          <div class="carousel-item active"
             style="background-image: url(assets/img/retail/j1.jpeg); background-size: contain; margin-top: 12rem; width: 100%; background-color: #ffffff;">
             <div class="carousel-container mt-5">
               <div class="container mt-5">
